--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less": "^4.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.6",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
